--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon-32x32.png"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Template react</title>
+  <meta charset="UTF-8" />
+  <link href="/assets/favicon/favicon-32x32.png" rel="icon" type="image/svg+xml" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <title>Arosaje</title>
 </head>
 <body>
 <div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
+<script src="/src/main.tsx" type="module"></script>
 </body>
 </html>
